# ScientificValueAgent

./: .flake8  .gitattributes  .gitignore  .gitmodules  .mc_work_run.sh  .mc_work_run_simple5phase.sh  .pre-commit-config.yaml  PLOT.ipynb  README.md  README.rst  example_jobs.yaml  justfile  pyproject.toml  ruff.toml  run.py  sine2phase-EI-seed=125.json.bz2
.github/: dependabot.yaml
.github/workflows/: ci-build.yaml  ci-deploy.yaml  ci.yaml  notebook_smoke.yaml  style_syntax.yaml  unit.yaml  unit_tests.yaml
example_jobs/: example_framework.yaml  example_sine2phase.yaml
figures/: .gitignore  README.rst  figure_bto.ipynb  figure_sine2phase.ipynb  figure_xrd1dim.ipynb
legacy/: campaign.py  classic.py  dynamic.py  policy_evaluation.py
legacy/gpax/: gpax.py
legacy/sine2phase/: sine2phase.py
notebooks/: .gitignore  00_simple_GP.ipynb  01_simple_2d_GP.ipynb  02_simple_2d_BO.ipynb  02_simple_SVA.ipynb  03_campaign.ipynb  03_multi-task_SVA.ipynb  03_simple_2d_BO.ipynb  03_simple_SVA.ipynb  03_simple_SVA_sine_multires.ipynb  04_GGCE.ipynb  04_campaign.ipynb  04_simple_2d_simulated_campaign.ipynb  05_load_sim_wafer.ipynb  05_misc_2d_simulated_campaign.ipynb  05_multi_task_GP.ipynb  multi-task-gp.ipynb  random_plots.ipynb  xx_campaign.ipynb  z_01_simple_campaign.ipynb
notebooks/v1.1.0/: .gitignore  figure_sine2phase.ipynb  figure_uvvis.ipynb
production_figures/: .gitignore  figure_sine2phase.ipynb  figure_sine2phase_appendix.ipynb  figure_xrd1dim.ipynb  test_xrd1dim_beta0.ipynb
production_figures/v1.1.0/: figure_BTO-2.ipynb  figure_BTO.ipynb  figure_uvvis_anomaly.ipynb  figure_xrd1dim.ipynb
scripts/: README.rst  build.sh  build_project.sh  install.sh  run_ggce_experiments.sh  run_gp_dreams.sh  run_simple5phase.sh  run_sine2phase.sh  run_sine2phase_importance_sampling.sh  test_notebooks.sh  tsp_run.sh
sva/: __init__.py  _campaign.py  _version.py  bayesian_optimization.py  campaign.py  entrypoint.py  experiments.py  logger.py  metrics.py  mpl_utils.py  postprocessing.py  tmp.py  utils.py  value.py
sva/_tests/: job_sine_2d_asymmetric_vf.yaml  job_sine_2d_symmetric_vf.yaml  job_xrd_1d_asymmetric_vf.yaml  test_all.py  test_do_nothing.py  test_simple_2d_GP.py  test_simple_GP.py  test_sine2phase.py
sva/campaign/: __init__.py  base.py
sva/configs/: core.yaml  utils.py
sva/configs/campaign_parameters/: common.yaml  default.yaml  (+3 more)
sva/experiments/: __init__.py  _gpax.py  base.py  binary_phases.py  campaign.py  classic.py  dynamic.py  gpax.py  multifidelity.py  multimodal.py  policy_evaluation.py  simple.py
sva/hydra_utils/: instantiators.py
sva/models/: __init__.py
sva/monty/: json.py
sva/old/: experiments.py
sva/policy/: __init__.py  base.py  sva.py
sva/truth/: __init__.py  bto.py  bto_data.nc  bto_weights.nc  bto_xca_weights.nc  common.py  linear2phase.py  simple_functions.py  sine2phase.py  uv.py  xrd1dim.py  xrd4phase.py
value_agent/: experiments.py  phases.py  truth.py  utils.py  uv_data.csv  value.py
value_agent/_tests/: job_sine_2d_asymmetric_vf.yaml  job_sine_2d_symmetric_vf.yaml  job_xrd4phase_2d_asymmetric_vf.yaml  job_xrd4phase_2d_symmetric_vf.yaml  job_xrd_1d_asymmetric_vf.yaml  test_all.py  xrd_1d_asymmetric_vf.yaml
value_agent/dummy/: grids.py  mu.py
value_agent/truth/: common.py  sine2phase.py  xrd1dim.py  xrd4phase.py
(+71 files in other folders)
