[project]
name = "ScientificValueAgent"
authors = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"},
    {"name" = "Phillip M. Maffettone", "email" = "pmaffetto@bnl.gov"},
]
maintainers = [
    {"name" = "Matthew R. Carbone", "email" = "mcarbone@bnl.gov"}
]
description = "The Scientific Value Agent"
readme = "README.rst"
requires-python = ">=3.9"
license = {"file" = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "dunamai",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "tqdm",
    "monty",
    "torch",
    "gpytorch==1.9.0",
    "botorch==0.7.2",
    "pyyaml",
    "matplotlib",
    "xarray",
    "tensorflow-cpu"
]

[project.optional-dependencies]
test = [
    "codecov",
    "coverage",
    "flake8",
    "pytest",
    "pytest-cov",
    "black",
    "nbstripout",
    "pre-commit",
]

[too.coverage.run]
omit = ["sva/EasyBO/*"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60

