[project]
name = "sva"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "attrs>=24.2.0",
    "hydra-core==1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "loguru>=0.7.2",
    "numpy>=2.1.3",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
linting = [
    "flake8>=7.1.1",
    "nbstripout>=0.8.1",
    "ruff>=0.8.0",
]
notebook = [
    "ipython>=8.29.0",
    "jupyterlab>=4.3.1",
]
test = [
    "codecov>=2.1.13",
    "coverage>=7.6.8",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]



[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60
