[project]
name = "sva"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "attrs>=24.2.0",
    "botorch==0.10.0",
    "hydra-core==1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "loguru>=0.7.2",
    "monty>=2024.7.30",
    "numpy>=2.0.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "sva/_version.py"


[project.scripts]
sva_run = "sva.entrypoint:entrypoint"

[project.optional-dependencies]
linting = [
    "flake8>=7.1.1",
    "nbstripout>=0.8.1",
    "ruff>=0.8.0",
]
test = [
    "codecov>=2.1.13",
    "coverage>=7.6.8",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 80
exclude = ["sva/_version.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 60
